...
            android:src="@drawable/settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelineTop"
            tools:srcCompat="@drawable/settings" />

        <ImageButton
            android:id="@+id/favoriseBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/favorised"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationBtn">

            <ImageView
                android:id="@+id/weatherIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
...
